2007-09-12  Dalibor Topic  <robilad@kaffe.org>

	Fix for #72.
	* config/alpha/callKaffeException.h (callKaffeException):
	Don't clobber frame pointer ($15). That fixes the build with gcc 4.1.

	Reported by:  Daniel Plaza  <daniel@dilmun.ls.fi.upm.es>

2007-09-12  Dalibor Topic  <robilad@kaffe.org>

	Fix for #102.
	* configure.ac: Reverted erroring out when gif headers are not found,
	that was introduced in 2006-11-19  Dalibor Topic  <robilad@kaffe.org>.

	Reported by:  Riccardo Mottola <riccardo@kaffe.org>

2007-09-12  Dalibor Topic  <robilad@kaffe.org>

	* config/Makefile.in: Regenerated.

2007-09-12  Dalibor Topic  <robilad@kaffe.org>

	Merged in Kurt Miller's port to x86_64-openbsd from
	OpenBSD ports repository.

	* README: Added x86_64-openbsd.
	* WHATSNEW: Added x86_64-openbsd port.

2007-09-12  Kurt Miller <kurt@intricatesoftware.com>

	* config/x86_64/openbsd2/config.frag,
	config/x86_64/openbsd2/md.c,
	config/x86_64/openbsd2/md.h: New files.

	* config/Makefile.am (EXTRA_DIST): Added x86_64/openbsd2/config.frag,
	x86_64/openbsd2/md.c and x86_64/openbsd2/md.h.

	* config/x86_64/threads.h (THREASTACKSIZE): Increase to 512K.

2007-09-12  Dalibor Topic  <robilad@kaffe.org>

	Fix for bug #91.
	* libraries/clib/awt/X/Makefile.am (libxawt_la_LDFLAGS),
	libraries/clib/awt/xynth/Makefile.am (libxynthawt_la_LDFLAGS),
	libraries/clib/awt/nano-X/Makefile.am (libnanoxawt_la_LDFLAGS): 
	export symbols starting with JNI_, like JNI_OnLoad.

2007-09-12  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/awt/X/cbd.c: Removed unnecessary jcl.h include.

2007-09-12  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/awt/X/evt.c: Removed unnecessary jcl.h include.

2007-09-11  Dalibor Topic  <robilad@kaffe.org>

	Fix for bug #98.
	* developers/autogen.sh:
	Drop boehm-gc reconfiguration.

	* libraries/javalib/Makefile.am:
	(MAYBE_GLIBJ_ZIP) Removed.
	(link-glibj-zip, unlink-glibj-zip, install-exec-local) Added 
	when using system classpath, or prebuilt glibj.zip.